29611 More unit tests from  Ricardo Gladwell
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/configuration/trunk@141912 13f79535-47bb-0310-9956-ffa450edef68